<resources>
    <string name="app_name">HomeMoodLightingClient</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="simple_lighting_program">Simple Lighting</string>
    <string name="fade_in_out_program">Fade In / Out</string>
    <string name="name_of_program">Name of the program</string>
    <string name="bedroom_program_type">Program type</string>
    <string name="pick_colors">Pick colors</string>
    <string name="error_name_empty">Please add a name to the program</string>
    <string name="program_deleted">Program deleted</string>
    <string name="undo">Undo</string>
    <string name="send_single_ip">Type IP address and port to communicate with the Arduino.</string>
    <string name="send_single_ip_hint">IP address</string>
    <string name="send_single_port_hint">port</string>
    <string name="send_single_message">Type the message to be sent to Arduino.</string>
    <string name="send_single_message_hint">Message</string>
    <string name="send">Send</string>
    <string name="bedroom">Bedroom</string>
    <string name="livingroom">Livingroom</string>
    <string name="send_single_data">Send single data</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="ip_address">IP address</string>
    <string name="port">Port</string>
    <string name="number_of_leds">Number of LEDs</string>
    <string name="frame_count_label">Frame count:</string>
    <string name="frames_per_sec_label">Frames per sec:</string>
    <string name="frames_per_sec_of_program">Frames per sec of program</string>
    <string name="edit_frames">Edit frames</string>
</resources>
