<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name_of_the_livingroom_program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_program" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/frames_per_sec_of_program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/frames_per_sec_of_program" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tv_count_of_frames_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:text="@string/frame_count_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/frame_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_toRightOf="@id/tv_count_of_frames_label"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="75" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/edit_frames" />

    </RelativeLayout>


</LinearLayout>