<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name_of_the_bedroom_program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_program" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/default_ui_spacing"
        android:text="@string/bedroom_program_type" />

    <Spinner
        android:id="@+id/bedroom_program_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/default_ui_spacing"
        android:paddingTop="@dimen/default_ui_spacing"
        android:text="@string/pick_colors" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.nyekilajos.homemoodligtingclient.ui.common.ColorIndicatorView
            android:id="@+id/color_1"
            android:layout_width="@dimen/color_indicator_size_large"
            android:layout_height="@dimen/color_indicator_size_large"
            android:layout_marginLeft="@dimen/default_ui_spacing"
            android:layout_marginRight="@dimen/default_ui_spacing"
            android:background="@color/colorPrimary"
            android:foreground="@drawable/square" />

        <com.nyekilajos.homemoodligtingclient.ui.common.ColorIndicatorView
            android:id="@+id/color_2"
            android:layout_width="@dimen/color_indicator_size_large"
            android:layout_height="@dimen/color_indicator_size_large"
            android:layout_marginLeft="@dimen/default_ui_spacing"
            android:layout_marginRight="@dimen/default_ui_spacing"
            android:background="@color/colorPrimary"
            android:foreground="@drawable/square" />

        <com.nyekilajos.homemoodligtingclient.ui.common.ColorIndicatorView
            android:id="@+id/color_3"
            android:layout_width="@dimen/color_indicator_size_large"
            android:layout_height="@dimen/color_indicator_size_large"
            android:layout_marginLeft="@dimen/default_ui_spacing"
            android:layout_marginRight="@dimen/default_ui_spacing"
            android:background="@color/colorPrimary"
            android:foreground="@drawable/square" />

        <com.nyekilajos.homemoodligtingclient.ui.common.ColorIndicatorView
            android:id="@+id/color_4"
            android:layout_width="@dimen/color_indicator_size_large"
            android:layout_height="@dimen/color_indicator_size_large"
            android:layout_marginLeft="@dimen/default_ui_spacing"
            android:layout_marginRight="@dimen/default_ui_spacing"
            android:background="@color/colorPrimary"
            android:foreground="@drawable/square" />

        <com.nyekilajos.homemoodligtingclient.ui.common.ColorIndicatorView
            android:id="@+id/color_5"
            android:layout_width="@dimen/color_indicator_size_large"
            android:layout_height="@dimen/color_indicator_size_large"
            android:layout_marginLeft="@dimen/default_ui_spacing"
            android:layout_marginRight="@dimen/default_ui_spacing"
            android:background="@color/colorPrimary"
            android:foreground="@drawable/square" />

    </LinearLayout>

</LinearLayout>